Made site responsive

--- a/index.html
+++ b/index.html
@@ -13,74 +13,78 @@
 </head>
 
 <body>
-<header>
-    <div id="logo"></div>
-    <div id="nav">
-        <ul>
-            <li>home</li>
-            <li>about</li>
-            <li>skills</li>
-            <li>projects</li>
-            <li>contact</li>
-        </ul>
-    </div>
+<div class="grid-wrapper">
+    <header>
+        <div id="logo"></div>
+        <div id="nav">
+            <ul>
+                <li>home</li>
+                <li>about</li>
+                <li>skills</li>
+                <li>projects</li>
+                <li>contact</li>
+            </ul>
+        </div>
 
-</header>
-<main>
-    <div class="box" id="home">
-        <div>
-            <h1>Livia Welschinger</h1>
-            <p>
-                Full stack developer
-            </p>
+    </header>
+    <main>
+        <div class="child-grid" id="home">
             <div>
+                <h1>Livia Welschinger</h1>
+                <p>
+                    Full stack developer
+                </p>
+                <div>
+                </div>
             </div>
+
         </div>
+        <div class="child-grid" id="about">
+            <h1>About</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 
-    </div>
-    <div class="box" id="about">
-        <h1>About</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-            sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-            dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-
-        </p>
-    </div>
-    <div class="box" id="skills">
-        <h1>Skills</h1>
-        <div id="skill-cards">
-            <div id="webdev-skills">
-                <p>Web development</p>
-            </div>
-            <div id="mobiledev-skills">
-                <p>Mobile development</p>
-            </div>
+            </p>
         </div>
+        <div class="child-grid" id="skills">
+            <h1>Skills</h1>
+            <div class="flex-wrapper">
+                <div class="card">
+                    <p>Backend</p>
+                </div>
+                <div  class="card">
+                    <p>Frontend</p>
+                </div>
+            </div>
 
-    </div>
-    <div class="box" id="projects">
-        <h1>Projects</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-            sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-            dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
+        <div class="child-grid" id="projects">
+            <h1>Projects</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 
-        </p>
-    </div>
-    <div class="box" id="contact">
-        <h1>Contact</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-            sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-            dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            </p>
+        </div>
+        <div class="child-grid" id="contact">
+            <h1>Contact</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 
-        </p>
-    </div>
-</main>
-<footer>
-    Footer
-</footer>
+            </p>
+        </div>
+    </main>
+    <footer>
+        Footer
+    </footer>
+
+
+</div>
 
 
 
