Finished hamburger menu

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
         </div>
     </div>
-    <header>
+   <!-- <header>
         <div id="logo"></div>
         <div id="nav">
             <ul>
@@ -71,7 +71,7 @@
             </ul>
         </div>
 
-    </header>
+    </header>-->
     <main>
         <div class="child-grid" id="home">
             <div class="flex-wrapper">
@@ -85,7 +85,6 @@
                         </h1>
                     </div>
                     <div class="flex-item">
-                        <p>Place image here</p>
                         <img src="images/profil.png" >
                     </div>
 
