Fixed footer layout

--- a/index.html
+++ b/index.html
@@ -120,14 +120,26 @@
         </div>
     </main>
     <footer>
+        <div class="footer-child-grid">
+            <p class="p-footer">© Designed and coded by Livia Welschinger</p>
+            <p class="p-footer">Hallo das ist ein bisschen Text</p>
+            <p class="p-footer">Hallo das ist ein bisschen Text</p>
+            </div>
+        <div class="footer-child-grid"> <a href="https://github.com/liviawelschinger" target="_blank"><img class="icon" src="images/github.png"></a>
+            <a href="https://www.instagram.com/liviacodes/?hl=de" target="_blank"> <img class="icon"
+                                                                                        src="images/instagram.png"></a>
+            <a href="https://www.linkedin.com/in/livia-welschinger/" target="_blank"><img class="icon"
+                                                                                          src="images/linkedin.png"></a>
+            <a href="https://www.xing.com/profile/Livia_Welschinger/cv" target="_blank"><img class="icon"
+                                                                                             src="images/xing.png"></a></div>
                 <!-- TODO Credit icons -->
-                <a href="https://github.com/liviawelschinger" target="_blank"><img class="icon" src="images/github.png"></a>
+               <!-- <a href="https://github.com/liviawelschinger" target="_blank"><img class="icon" src="images/github.png"></a>
                 <a href="https://www.instagram.com/liviacodes/?hl=de" target="_blank"> <img class="icon"
                                                                                             src="images/instagram.png"></a>
                 <a href="https://www.linkedin.com/in/livia-welschinger/" target="_blank"><img class="icon"
                                                                                               src="images/linkedin.png"></a>
                 <a href="https://www.xing.com/profile/Livia_Welschinger/cv" target="_blank"><img class="icon"
-                                                                                                 src="images/xing.png"></a>
+                                                                                                 src="images/xing.png"></a>-->
     </footer>
 </div>
 
