Edit footer text

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
     <footer>
         <div class="footer-child-grid">
             <p class="p-footer">© Designed and coded by Livia Welschinger</p>
-            <p class="p-footer">Hallo das ist ein bisschen Text</p>
-            <p class="p-footer">Hallo das ist ein bisschen Text</p>
+            <p class="p-footer">Icons made by <a class="link" href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a class="link" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
+            <p class="p-footer">Illustration from <a class="link" href="https://undraw.co" title="unDraw">unDraw</a></p>
             </div>
         <div class="footer-child-grid"> <a href="https://github.com/liviawelschinger" target="_blank"><img class="icon" src="images/github.png"></a>
             <a href="https://www.instagram.com/liviacodes/?hl=de" target="_blank"> <img class="icon"
